<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_outline"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/hint_username"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_txt_name"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_outline"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/hint_email"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_txt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_txt_email"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_outline"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/hint_phone"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_txt_phone"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_outline"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/hint_password"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_txt_password"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/checkbox_tac"
        android:textSize="10.5sp" />

    <Button
        android:id="@+id/btn_to_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_outline"
        android:fontFamily="@font/poppins_medium"
        android:paddingVertical="10dp"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_to_home"
        android:layout_marginTop="15dp"
        android:text="@string/already_have_an_account"
        android:fontFamily="@font/poppins_medium"
        android:textAlignment="center"
        android:textSize="12sp" />

</RelativeLayout>
