<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/txt_homepage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/homepage"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_recieved_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_homepage"
        android:layout_marginTop="60dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/hint_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txt_recieved_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_recieved_name"
        android:layout_marginTop="12dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/hint_email"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txt_recieved_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_recieved_email"
        android:layout_marginTop="12dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/hint_phone"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_recieved_phone"
        android:layout_marginTop="150dp"
        android:backgroundTint="@color/blue"
        android:background="@drawable/button_outline"
        android:fontFamily="@font/poppins_medium"
        android:paddingVertical="10dp"
        android:text="@string/logout"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
